# GCRM

./: .gitignore  Cargo.toml  LICENSE  SECURITY.md  settings.yml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
deploy/: CUTOVER.md
deploy/eyes/: package-lock.json  package.json  smoke.mjs
deploy/ollama.service.d/: override.conf
docs/: .~lock.README.md#  GCRM_Audit_Report.md  README.md  data-sources.md  headline-read-contract-v1.md  improvement-log.md  roadmap.md  scorecard.md
docs/model-reviews/: 2026-06-01.md  2026-06-02.md
logs/: timeline_2026-04-06.jsonl  timeline_2026-04-08.jsonl  timeline_2026-05-26.jsonl
src/: aggregator.rs  api.rs  backfill.rs  backtest.rs  bayesian.rs  brief.rs  dashboard.html  detector.rs  indicators.rs  ingestor.rs  livestream.rs  llm_enricher.rs  main.rs  methodology.html  models.rs  nlp_sidecar.rs  osint.rs  processor.rs  server.rs  theater.rs  thumbs.rs  video.rs
