# ------------------------------------------------------------
# RAiTHE INDUSTRIES INCORPORATED
# Copyright (c) 2026 All Rights Reserved.
#
# This file is part of a proprietary system. Unauthorized use,
# reproduction, or distribution is strictly prohibited.
# ------------------------------------------------------------

[package]
name        = "gcrm"
version     = "0.1.0"
edition     = "2021"
authors     = ["Robert Perreault — Raithe Industries Inc."]
description = "Global Conflict Risk Monitor — Rust core (Phase 1)"

[[bin]]
name = "gcrm"
path = "src/main.rs"

# ── Async runtime ──────────────────────────────────────────────────────────────
[dependencies]
tokio          = { version = "1",  features = ["full"] }          # async runtime
tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # WebSocket

# ── HTTP / feeds ───────────────────────────────────────────────────────────────
reqwest  = { version = "0.11", features = ["json", "native-tls", "gzip", "brotli", "deflate"] }
feed-rs  = "1"                                                     # RSS / Atom parser

# ── Web framework ──────────────────────────────────────────────────────────────
axum     = { version = "0.7",  features = ["ws", "macros"] }
tower    = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# ── Serialisation ──────────────────────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# ── Data structures ────────────────────────────────────────────────────────────
uuid     = { version = "1", features = ["v4"] }
chrono   = { version = "0.4", features = ["serde"] }
dashmap  = "5"                                                     # concurrent HashMap

# ── Numerics ──────────────────────────────────────────────────────────────────
ordered-float = "4"                                                # f64 in maps/sets

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
anyhow   = "1"                                                     # ergonomic errors
thiserror = "1"                                                    # typed errors
once_cell = "1"                                                    # lazy statics
regex    = "1"
md5      = "0.7"
futures  = "0.3"
bytes    = "1"
url      = "2"

# engineering-effects OSINT modules (World Monitor / SitDeck parity).
# Git deps so the cloud-routine + deploy build GCRM standalone (no sibling checkout).
ee-core      = { git = "https://github.com/raithe-industries/engineering-effects", branch = "main" }
ee-sources   = { git = "https://github.com/raithe-industries/engineering-effects", branch = "main" }
ee-correlate = { git = "https://github.com/raithe-industries/engineering-effects", branch = "main" }
ee-view      = { git = "https://github.com/raithe-industries/engineering-effects", branch = "main" }

[dev-dependencies]
approx   = "0.5"                                                   # float equality in tests
tempfile = "3"                                                     # temp files for load_epoch tests
tokio    = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level     = 3
lto           = true      # link-time optimisation — smaller, faster binary
codegen-units = 1         # maximise optimisation (slower compile, faster runtime)
strip         = true      # strip debug symbols from release binary
panic         = "abort"   # no unwinding overhead in release
