# ------------------------------------------------------------
# RAiTHE INDUSTRIES INCORPORATED
# Copyright (c) 2026 All Rights Reserved.
#
# This file is part of a proprietary system. Unauthorized use,
# reproduction, or distribution is strictly prohibited.
# ------------------------------------------------------------

[package]
name        = "gcrm"
version     = "0.1.0"
edition     = "2021"
authors     = ["Robert Perreault — Raithe Industries Inc."]
description = "Global Conflict Risk Monitor — Rust core (Phase 1)"

[[bin]]
name = "gcrm"
path = "src/main.rs"

# ── Workspace over the vendored engineering-effects modules ─────────────────────
# GCRM is a one-package workspace so the vendored ee-* crates' `*.workspace = true`
# deps resolve here, keeping GCRM fully self-contained (no external/private repo).
[workspace]
members = [".", "vendor/ee-core", "vendor/ee-sources", "vendor/ee-correlate", "vendor/ee-view"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow      = "1"
async-trait = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.11", features = ["json", "native-tls", "gzip"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }

# ── Async runtime ──────────────────────────────────────────────────────────────
[dependencies]
tokio          = { version = "1",  features = ["full"] }          # async runtime
tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # WebSocket

# ── HTTP / feeds ───────────────────────────────────────────────────────────────
reqwest  = { version = "0.11", features = ["json", "native-tls", "gzip", "brotli", "deflate"] }
feed-rs  = "1"                                                     # RSS / Atom parser

# ── Web framework ──────────────────────────────────────────────────────────────
axum     = { version = "0.7",  features = ["ws", "macros"] }
tower    = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# ── Serialisation ──────────────────────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# ── Data structures ────────────────────────────────────────────────────────────
uuid     = { version = "1", features = ["v4"] }
chrono   = { version = "0.4", features = ["serde"] }
dashmap  = "5"                                                     # concurrent HashMap

# ── Numerics ──────────────────────────────────────────────────────────────────
ordered-float = "4"                                                # f64 in maps/sets

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
anyhow   = "1"                                                     # ergonomic errors
thiserror = "1"                                                    # typed errors
once_cell = "1"                                                    # lazy statics
regex    = "1"
md5      = "0.7"
futures  = "0.3"
bytes    = "1"
url      = "2"

# engineering-effects OSINT modules (World Monitor / SitDeck parity), VENDORED in
# vendor/ so the cloud-routine + deploy build GCRM with no access to the private repo.
# To refresh: re-copy crates/ee-{core,sources,correlate,view} from engineering-effects.
ee-core      = { path = "vendor/ee-core" }
ee-sources   = { path = "vendor/ee-sources" }
ee-correlate = { path = "vendor/ee-correlate" }
ee-view      = { path = "vendor/ee-view" }

[dev-dependencies]
approx   = "0.5"                                                   # float equality in tests
tempfile = "3"                                                     # temp files for load_epoch tests
tokio    = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level     = 3
lto           = true      # link-time optimisation — smaller, faster binary
codegen-units = 1         # maximise optimisation (slower compile, faster runtime)
strip         = true      # strip debug symbols from release binary
# panic = unwind (the default), NOT abort. This is an always-on public monitor ingesting
# provider-controlled feeds: with abort, a single panicking parse in any one feed task
# kills the WHOLE process (and makes the per-task catch_unwind supervision in main()
# ineffective). Unwind isolates a panic to its own task so one bad feed degrades that
# feed, not the dashboard. The unwinding-overhead cost is negligible vs that blast radius.
# (audit ee_core_cargo-3 / xcut_net-4)
panic         = "unwind"
